lab12/zad2/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f my-worker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f my-worker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/zad2-default: "true"
        io.kompose.service: worker
    spec:
      containers:
        - image: node
          name: worker
          resources: {}
      restartPolicy: Always
status: {}
