lab12/zad2/zad2-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: zad2-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/zad2-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/zad2-default: "true"
